--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
     <head>
-        <title>Annie Wu Portfolio</title>
+        <title>Sarah Grevy Gotfredsen Portfolio</title>
 
         <link rel="icon" type="image/svg+xml" href="favicon.svg" />
 
@@ -12,23 +12,23 @@
         <meta property="og:type" content="website" />
         <meta property="og:url" content="http://anniew.xyz" />
         <meta property="og:description"
-            content="Hi! I'm Annie. Welcome to my portfolio. I am a developer, photographer, and mother of a bear puppy named Coconut based in Los Angeles, California." />
+            content="Hi! I'm Sarah, an aspirering data journalist and current grad student at Columbia University." />
         <meta property="og:locale" content="en_US" />
         <meta property="og:image" content="https://anniew.xyz/img/me-icon-smiling.png" />
 
         <meta name="twitter:card" content="summary">
         <meta name="twitter:title" content="Annie Wu">
         <meta name="twitter:description"
-            content="Welcome to my portfolio. I am a developer, photographer, and mother of a bear puppy named Coconut based in Los Angeles, California.">
+            content="Hi! I'm Sarah, an aspirering data journalist and current grad student at Columbia University.">
         <meta name="twitter:image" content="https://anniew.xyz/img/me-icon-smiling.png">
         <meta name="twitter:site" content="@anniedotexe">
 
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="copyright" content="Annie Wu">
         <meta name="description"
-            content="Welcome to my portfolio. I am a developer, photographer, and mother of a bear puppy named Coconut based in Los Angeles, California.">
+            content=Hi! I'm Sarah, an aspirering data journalist and current grad student at Columbia University">
         <meta name="keywords"
-            content="Annie Wu, Annie Wu Portfolio, Annie Wu Photography, photographer, developer, java, python, html, css, javascript, web developer, webdev, portfolio">
+            content="Sarah Grevy Gotfredse, data journalism, columbia">
         <meta name="robots" content="noindex, nofollow" />
 
         <link rel="canonical" href="https://anniew.xyz" />
@@ -66,14 +66,11 @@
             <section id="home">
                 <div class="landing-page-details">
                     <h1 class="small-title">Hi,</h1>
-                    <h2 class="big-title">I'm <span class="my-name pink">Annie</span></h2>
-                    <h3 class="medium-title"><em>Client Support Specialist @ <a class="pink"
+                    <h2 class="big-title">I'm <span class="my-name pink">Sarah</span></h2>
+                    <h3 class="medium-title"><em>Data Journalist @ <a class="pink"
                                 href="https://get.popmenu.com/">Popmenu</a></em></h3>
                     <div class="short-bio">
-                        <p>I am a photographer, self-taught developer, and
-                            mother of a bear
-                            puppy named Coconut
-                            based in Los Angeles, California.</p>
+                        <p>Hi! I'm Sarah, an aspirering data journalist and current grad student at Columbia University</p>
                     </div>
                     <div class="cta-container email-container">
                         <a href="mailto:anniewu2303@gmail.com" class="cta email-button">
