--- a/index.html
+++ b/index.html
@@ -70,10 +70,10 @@
                     <h3 class="medium-title"><em>Data Journalist @ <a class="pink"
                                 href="https://get.popmenu.com/">Popmenu</a></em></h3>
                     <div class="short-bio">
-                        <p>Hi! I'm Sarah, an aspirering data journalist and current grad student at Columbia University</p>
+                        <p>an aspirering data journalist and current grad student at Columbia University</p>
                     </div>
                     <div class="cta-container email-container">
-                        <a href="mailto:anniewu2303@gmail.com" class="cta email-button">
+                        <a href="mailto:sgg2140@columbia.edu" class="cta email-button">
                             <img src="./img/email.svg" alt="Email Icon">
                             <span>Say Hello</span>
                         </a>
@@ -85,13 +85,13 @@
                 <div class="landing-page-socials">
                     <ul>
                         <li class="social-link">
-                            <a href="https://www.linkedin.com/in/anniewu2303/" aria-label="LinkedIn"
+                            <a href="https://www.linkedin.com/in/sarah-grevy-gotfredsen-aa9538174/" aria-label="LinkedIn"
                                 target="_blank">
                                 <i class="fab fa-linkedin-in"></i>
                             </a>
                         </li>
                         <li class="social-link">
-                            <a href="https://github.com/anniedotexe" aria-label="GitHub"
+                            <a href="https://github.com/SarahGrevy" aria-label="GitHub"
                                 target="_blank">
                                 <i class="fab fa-github"></i>
                             </a>
@@ -102,12 +102,7 @@
                                 <i class="fab fa-twitter"></i>
                             </a>
                         </li>
-                        <li class="social-link">
-                            <a href="https://instagram.com/anniedotexe" aria-label="Instagram"
-                                target="_blank">
-                                <i class="fab fa-instagram"></i>
-                            </a>
-                        </li>
+                        
                     </ul>
                 </div>
             </section>
