--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <meta name="twitter:title" content="Annie Wu">
         <meta name="twitter:description"
             content="Hi! I'm Sarah, an aspirering data journalist and current grad student at Columbia University.">
-        <meta name="twitter:image" content="https://anniew.xyz/img/me-icon-smiling.png">
+        <meta name="twitter:image" content="https://sarahgrevy.github.io/img/me-icon-smiling.png">
         <meta name="twitter:site" content="@anniedotexe">
 
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
