--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <meta property="og:description"
             content="Hi! I'm Sarah, an aspirering data journalist and current grad student at Columbia University." />
         <meta property="og:locale" content="en_US" />
-        <meta property="og:image" content="https://anniew.xyz/img/me-icon-smiling.png" />
+        <meta property="og:image" content="https://sarahgrevy.github.io/img/me-icon-smiling.png" />
 
         <meta name="twitter:card" content="summary">
         <meta name="twitter:title" content="Annie Wu">
