--- a/index.html
+++ b/index.html
@@ -8,20 +8,20 @@
 
         <meta charset="UTF-8">
 
-        <meta property="og:title" content="Annie Wu" />
+        <meta property="og:title" content="Sarah Gotfredsen" />
         <meta property="og:type" content="website" />
-        <meta property="og:url" content="http://anniew.xyz" />
+        <meta property="og:url" content="https://sarahgrevy.github.io/" />
         <meta property="og:description"
             content="Hi! I'm Sarah, an aspirering data journalist and current grad student at Columbia University." />
         <meta property="og:locale" content="en_US" />
         <meta property="og:image" content="https://sarahgrevy.github.io/img/me-icon-smiling.png" />
 
         <meta name="twitter:card" content="summary">
-        <meta name="twitter:title" content="Annie Wu">
+        <meta name="twitter:title" content="Sarah Gotfredsen">
         <meta name="twitter:description"
             content="Hi! I'm Sarah, an aspirering data journalist and current grad student at Columbia University.">
         <meta name="twitter:image" content="https://sarahgrevy.github.io/img/me-icon-smiling.png">
-        <meta name="twitter:site" content="@anniedotexe">
+        <meta name="twitter:site" content="@grevy_sarah">
 
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="copyright" content="Annie Wu">
