--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
         <meta property="og:description"
             content="Hi! I'm Sarah, an aspirering data journalist and current grad student at Columbia University." />
         <meta property="og:locale" content="en_US" />
-        <meta property="og:image" content="https://sarahgrevy.github.io/img/me-icon-smiling.png" />
+        <!--- <meta property="og:image" content="https://sarahgrevy.github.io/img/me-icon-smiling.png" /> -->
 
         <meta name="twitter:card" content="summary">
         <meta name="twitter:title" content="Sarah Gotfredsen">
         <meta name="twitter:description"
             content="Hi! I'm Sarah, an aspirering data journalist and current grad student at Columbia University.">
-        <meta name="twitter:image" content="https://sarahgrevy.github.io/img/me-icon-smiling.png">
+        <!---  <meta name="twitter:image" content="https://sarahgrevy.github.io/img/me-icon-smiling.png"> --> 
         <meta name="twitter:site" content="@grevy_sarah">
 
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
