--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                     </div>
                 </div>
                 <div class="art-me">
-                    <img src="./img/me-icon-smiling.png" alt="Me">
+                  <!--  <img src="./img/me-icon-smiling.png" alt="Me"> -->
                   
                 </div>
                 <div class="landing-page-socials">
