--- a/about.html
+++ b/about.html
@@ -8,27 +8,27 @@
 
         <meta charset="UTF-8">
 
-        <meta property="og:title" content="About Me ~ Annie Wu" />
+        <meta property="og:title" content="About Me ~ Sarah Grevy Gotfredsen" />
         <meta property="og:type" content="website" />
-        <meta property="og:url" content="http://anniew.xyz/about" />
+        <meta property="og:url" content="https://sarahgrevy.github.io/about" />
         <meta property="og:description"
-            content="Hi! I'm Annie. I have been working with computers and technology for most of my life being the go-to tech support for friends and family, and I am a self-taught web developer. I also enjoy photographing animals, places, and things on both digital and film." />
+            content="Hi, I'm Sarah. I'm terrified to enter the job market." />
         <meta property="og:locale" content="en_US" />
         <meta property="og:image" content="https://anniew.xyz/img/me-icon-smiling.png" />
 
         <meta name="twitter:card" content="summary">
         <meta name="twitter:title" content="About Me ~ Annie Wu">
         <meta name="twitter:description"
-            content="Hi! I'm Annie. I have been working with computers and technology for most of my life being the go-to tech support for friends and family, and I am a self-taught web developer. I also enjoy photographing animals, places, and things on both digital and film.">
+            content="Hi, I'm Sarah. I'm terrified to enter the job market.">
         <meta name="twitter:image" content="https://anniew.xyz/img/me-icon-smiling.png">
         <meta name="twitter:site" content="@anniedotexe">
 
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="copyright" content="Annie Wu">
         <meta name="description"
-            content="Hi! I'm Annie. I have been working with computers and technology for most of my life being the go-to tech support for friends and family, and I am a self-taught web developer. I also enjoy photographing animals, places, and things on both digital and film.">
+            content="Hi, I'm Sarah. I'm terrified to enter the job market.">
         <meta name="keywords"
-            content="Annie Wu, Annie Wu Portfolio, Annie Wu Photography, photographer, developer, java, python, html, css, javascript, web developer, webdev, portfolio">
+            content="Sarah Grevy Gotfredsen, Columbia University, data analysis, coding, NYU">
         <meta name="robots" content="noindex, nofollow" />
 
         <link rel="canonical" href="https://anniew.xyz/about" />
