--- a/index.html
+++ b/index.html
@@ -112,11 +112,11 @@
                 <p class="section-description">
                     Here are some of the projects I have worked on.<br>
                     You can find more on <a class="hyperlink"
-                        href="https://github.com/anniedotexe">GitHub</a>.
+                        href="https://github.com/SarahGrevy">GitHub</a>.
                 </p>
                 <div class="project-cards-container">
                     <div class="card">
-                        <img src="./img/project-preview/subuwu-preview.png"
+                        <img src="./img/SC_2021.png"
                             alt="Project Preview Screenshot" class="card-preview-img">
                         <div class="card-info">
                             <div class="title-and-links">
@@ -124,22 +124,22 @@
                                     Subuwu
                                 </span>
                                 <div class="project-links">
-                                    <a href="https://subuwu.anniew.xyz/">
+                                    <a href="https://github.com/SarahGrevy">
                                         <i class="fas fa-external-link-alt"></i>
                                     </a>
-                                    <a href="https://github.com/anniedotexe/subuwu">
+                                    <a href="https://github.com/SarahGrevy/Supremcourt_Mapping">
                                         <i class="fab fa-github"></i>
                                     </a>
                                 </div>
                             </div>
                             <div class="project-skills">
-                                <span>ReactJS</span>
-                                <span>Redux</span>
-                                <span>Styled-Components</span>
+                                <span>Python</span>
+                                <span>Regex</span>
+                                <span>JavaScript</span>
                             </div>
                             <p class="project-description">
-                                This is a responsive Tesla website clone customized for Subuwu
-                                &#40;Subaru but its uwu&#41;.
+                                An interactive map of the United States depicting 2020 supremecourt cases containing the most agreeable and disagreeable langauge between court members.
+                              
                             </p>
                         </div>
                     </div>
