--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                         <div class="card-info">
                             <div class="title-and-links">
                                 <span class="project-title">
-                                    Subuwu
+                                    Mapping Language Use in 2020 Supremcourt Cases
                                 </span>
                                 <div class="project-links">
                                     <a href="https://github.com/SarahGrevy">
@@ -144,30 +144,28 @@
                         </div>
                     </div>
                     <div class="card">
-                        <img src="./img/project-preview/comfy-coffee-preview.png"
+                        <img src="./img/tove.png"
                             alt="Project Preview Screenshot" class="card-preview-img">
                         <div class="card-info">
                             <div class="title-and-links">
                                 <span class="project-title">
-                                    Comfy Coffee
+                                    Poem NPL Analysis 
                                 </span>
                                 <div class="project-links">
-                                    <a href="https://comfy-coffee.anniew.xyz/">
+                                    <a href="https://github.com/SarahGrevy">
                                         <i class="fas fa-external-link-alt"></i>
                                     </a>
-                                    <a href="https://github.com/anniedotexe/comfy-coffee">
+                                    <a href="https://github.com/SarahGrevy/Poem_Analysis">
                                         <i class="fab fa-github"></i>
                                     </a>
                                 </div>
                             </div>
                             <div class="project-skills">
-                                <span>HTML5</span>
-                                <span>CSS3</span>
+                                <span>BeautifulSoup</span>
+                                <span>Regex</span>
                             </div>
                             <p class="project-description">
-                                This is the landing page for a fictitious coffee shop called "Comfy
-                                Coffee" based on Starbucks'
-                                website design.
+                                Text analysis of selected poems by danish author Tove Ditlevsen
                             </p>
                         </div>
                     </div>
