--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                         <div class="card-info">
                             <div class="title-and-links">
                                 <span class="project-title">
-                                    Poem NPL Analysis 
+                                    Poem Analysis 
                                 </span>
                                 <div class="project-links">
                                     <a href="https://github.com/SarahGrevy">
@@ -170,35 +170,29 @@
                         </div>
                     </div>
                     <div class="card">
-                        <img src="./img/project-preview/amazon2-preview.png"
+                        <img src="./img/beer.jpeg"
                             alt="Project Preview Screenshot" class="card-preview-img">
                         <div class="card-info">
                             <div class="title-and-links">
                                 <span class="project-title">
-                                    Amazon 2.0
+                                    Beer Analysis 
                                 </span>
                                 <div class="project-links">
                                     <a href="https://clone-2-2ee81.firebaseapp.com">
                                         <i class="fas fa-external-link-alt"></i>
                                     </a>
-                                    <a href="https://github.com/anniedotexe/amazon-2">
+                                    <a href="https://github.com/SarahGrevy/Beer_Analysis/blob/main/gotfredsen_beer.ipynb">
                                         <i class="fab fa-github"></i>
                                     </a>
                                 </div>
                             </div>
                             <div class="project-skills">
-                                <span>HTML5</span>
-                                <span>Tailwind CSS</span>
-                                <span>JavaScript</span>
-                                <span>Firebase</span>
-                                <span>Firestore Database</span>
+                                <span>Python</span>
+                                <span>Pandas</span>
+                          
                             </div>
                             <p class="project-description">
-                                A redesigned Amazon clone inspired by this <a class="hyperlink"
-                                    href="https://dribbble.com/shots/15350650-Amazon-Website-Redesign-Concept">concept
-                                    design</a> on Dribbble. You can add items to cart, delete items
-                                from the cart, and increase or decrease the quantity of an item in
-                                the cart.
+                                Analysis of top beer producers in the U.S. 
                             </p>
                         </div>
                     </div>
