--- a/about.html
+++ b/about.html
@@ -72,9 +72,9 @@
                 </p>
                 <div class="profile-container">
                     <div class="me-icon-container">
-                        <img class="me-icon" src="./img/me-icon.gif"
-                            alt="Icon of myself with my bear puppy, Coconut, on top of my head"
-                            title="Icon of me and Coconut. Art credits to my friend Steph.">
+                        <img class="me-icon" src="./img/me.png"
+                            alt="me"
+                            title="me.">
                     </div>
                     <div class="terminal-container">
                         <div class="terminal-header">
