--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="copyright" content="Annie Wu">
         <meta name="description"
-            content="Hi, I'm Sarah. I'm terrified to enter the job market.">
+            >
         <meta name="keywords"
             content="Sarah Grevy Gotfredsen, Columbia University, data analysis, coding, NYU">
         <meta name="robots" content="noindex, nofollow" />
@@ -55,8 +55,7 @@
                 <div class="toggle"><i class="fas fa-bars"></i></div>
                 <ul class="nav-menu">
                     <li class="nav-item"><a href="/about">About</a></li>
-                    <li class="nav-item"><a href="/projects">Projects</a></li>
-                    <li class="nav-item"><a href="/photos">Photos</a></li>
+   
                 </ul>
             </nav>
         </header>
@@ -68,7 +67,7 @@
                     <h2>annie.<span class="pink">profile</span></h2>
                 </div>
                 <p class="section-description">
-                    Hi, I'm Sarah. I'm terrified at entering the job market. 
+              
                 </p>
                 <div class="profile-container">
                     <div class="me-icon-container">
@@ -88,7 +87,7 @@
                         <div class="terminal-window">
                             <div class="statement">
                                 <p class="input">
-                                    annie.<span class="green">location</span>
+                                    sarah.<span class="green">location</span>
                                 </p>
                                 <p class="return">
                                     new york city, new york 
@@ -112,12 +111,12 @@
                             </div>
                             <div class="statement">
                                 <p class="input">
-                                    sarah.<span class="green">bearPuppy</span>
+                                    sarah.<span class="green">DrinkOfChoice</span>
                                 </p>
                                 <p class="return">
                                     <a target="_blank"
-                                        href="https://www.instagram.com/coconut_bearpuppy/"
-                                        class="hyperlink">Coconut</a>
+                                   
+                                        class="hyperlink">Frozen Marg</a>
                                 </p>
                             </div>
                             <div class="statement">
@@ -161,7 +160,7 @@
                         </div>
                     </div>
                 </div>
-                <div id="experience" class="education-experience-container">
+<!--                 <div id="experience" class="education-experience-container">
                     <h3>Experience</h3>
                     <div class="education-experience-card">
                         <div class="card-info">
@@ -212,7 +211,7 @@
                                 copy filing, and data entry as required.</p>
                         </div>
                     </div>
-                </div>
+                </div> -->
             </section>
             <section id="tech-stack">
                 <h3>Tech Stack</h3>
