--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
     <head>
-        <title>About Me ~ Annie Wu</title>
+        <title>About Me ~ Sarah Grevy</title>
 
         <link rel="icon" type="image/svg+xml" href="favicon.svg" />
 
@@ -74,6 +74,7 @@
                         <img class="me-icon" src="./img/me.png"
                             alt="me"
                             title="me.">
+                        <br> <div></div>
                     </div>
                     <div class="terminal-container">
                         <div class="terminal-header">
