--- a/about.html
+++ b/about.html
@@ -76,6 +76,7 @@
                             title="me.">
                         <br> <div></div>
                     </div>
+                    <div> </div>
                     <div class="terminal-container">
                         <div class="terminal-header">
                             <div id="terminal-title">sarah.exe</div>
@@ -107,7 +108,7 @@
                                     sarah.<span class="green">languages</span>
                                 </p>
                                 <p class="return">
-                                    [english, danish, german]
+                                    [english, danish, german, Swedish]
                                 </p>
                             </div>
                             <div class="statement">
@@ -117,7 +118,7 @@
                                 <p class="return">
                                     <a target="_blank"
                                    
-                                        class="hyperlink">Frozen Marg</a>
+                                        class="return">Frozen Marg</a>
                                 </p>
                             </div>
                             <div class="statement">
