--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
         <meta property="og:image" content="https://anniew.xyz/img/me-icon-smiling.png" />
 
         <meta name="twitter:card" content="summary">
-        <meta name="twitter:title" content="About Me ~ Annie Wu">
+        <meta name="twitter:title" content="About Me ~ Sarah Grevy">
         <meta name="twitter:description"
             content="Hi, I'm Sarah. I'm terrified to enter the job market.">
         <meta name="twitter:image" content="https://anniew.xyz/img/me-icon-smiling.png">
