--- a/about.html
+++ b/about.html
@@ -64,7 +64,7 @@
             <section id="profile">
                 <div class="page-title">
                     <img src="./img/smile.svg" alt="Smile Icon">
-                    <h2>annie.<span class="pink">profile</span></h2>
+                    <h2>sarah.<span class="pink">profile</span></h2>
                 </div>
                 <p class="section-description">
               
