--- a/about.html
+++ b/about.html
@@ -108,7 +108,7 @@
                                     sarah.<span class="green">languages</span>
                                 </p>
                                 <p class="return">
-                                    [english, danish, german, Swedish]
+                                    [english, danish, german, swedish]
                                 </p>
                             </div>
                             <div class="statement">
@@ -303,6 +303,7 @@
                         </ul>
                     </div>
                 </div>
+                 <!-- 
                 <div class="footer-column">
                     <a href="/about" class="footer-button">
                         <img src="./img/smile.svg" alt="Smile Icon">
@@ -317,7 +318,7 @@
                         Photos
                     </a>
                 </div>
-                <!-- <div class="footer-column">
+               <div class="footer-column">
                     <a href="https://anniedotexe.notion.site/2f89ab02918142e885a684db6e8d6c53?v=e84b8638720749c9a11741c6790c7022"
                         class="footer-button">
                         <img src="./img/blog.svg" alt="Blog Icon">
@@ -331,7 +332,7 @@
                         <img src="./img/email.svg" alt="Email Icon">
                         Contact
                     </a>
-                </div> -->
+                </div> 
                 <div class="footer-column">
                     <a href="https://anniedotexe.notion.site/uses-27a07012b8e84144af2e4226721c8ce8"
                         class="footer-button">
@@ -346,7 +347,7 @@
                         <img src="./img/email.svg" alt="Email Icon">
                         Contact
                     </a>
-                </div>
+                </div> -->
             </div>
         </footer>
 
