--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     <h3 class="medium-title"><em>Data Journalist @ <a class="pink"
                                 href="https://journalism.columbia.edu/data">Columbia Journalism School</a></em></h3>
                     <div class="short-bio">
-                        <p>...an aspirering data journalist and current grad student at Columbia University</p>
+                        <p>data journalist and grad student at Columbia University</p>
                     </div>
                     <div class="cta-container email-container">
                         <a href="mailto:sgg2140@columbia.edu" class="cta email-button">
