--- a/about.html
+++ b/about.html
@@ -63,7 +63,7 @@
         <main class="main-container about-section">
             <section id="profile">
                 <div class="page-title">
-                    <img src="./img/marg.png" alt="Smile Icon">
+                    <img src="./img/smile.svg" alt="Smile Icon">
                     <h2>sarah.<span class="pink">profile</span></h2>
                 </div>
                 <p class="section-description">
