--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
                     </div>
                 </div>
                 <div class="cta-container">
-                    <a href="/projects" class="cta">
+                    <a href="https://github.com/SarahGrevy" class="cta">
                         <img src="./img/coding.svg" alt="Code Icon">
                         <span>Explore More</span>
                     </a>
