--- a/about.html
+++ b/about.html
@@ -128,6 +128,39 @@
                     </div>
                 </div>
             </section>
+            
+            <div id="experience" class="education-experience-container">
+                    <h3>Experience</h3>
+                    <div class="education-experience-card">
+                        <div class="card-info">
+                            <h4 class="green">Client Support Specialist</h4>
+                            <p class="date">Sept 2021 - Present</p>
+                            <p><a href="https://get.popmenu.com/">Popmenu</a><br>
+                                Remote</p>
+                        </div>
+                        <div class="card-description">
+                            <p><em>to be updated*</em></p>
+                        </div>
+                    </div>
+                    <div class="education-experience-card">
+                        <div class="card-info">
+                            <h4 class="green">Independent Computer Technician</h4>
+                            <p class="date">Jan 2018 - Present</p>
+                            <p>Freelance<br>
+                                Remote</p>
+                        </div>
+                        <div class="card-description">
+                            <p>Install, test, repair, and troubleshoot mobile devices, computer
+                                systems, and related peripheral devices.</p>
+                            <p>Assemble, maintain, and repair custom PCs, install and repair
+                                Windows OS, configure BIOS and UEFI.</p>
+                            <p>Provide technical assistance for clients on assembly and initial
+                                setup of their PCs.</p>
+                            <p>Recommend PC hardware and peripheral purchases to best serve
+                                client’s needs and budget.</p>
+                        </div>
+                    </div>
+                
             <section id="education-experience">
                 <div id="education" class="education-experience-container">
                     <h3>Education</h3>
