--- a/about.html
+++ b/about.html
@@ -21,10 +21,10 @@
         <meta name="twitter:description"
             content="Hi, I'm Sarah. I'm terrified to enter the job market.">
         <meta name="twitter:image" content="https://anniew.xyz/img/me-icon-smiling.png">
-        <meta name="twitter:site" content="@anniedotexe">
+        <meta name="twitter:site" content="@asarahgrevy">
 
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="copyright" content="Annie Wu">
+       
         <meta name="description"
             >
         <meta name="keywords"
@@ -108,7 +108,7 @@
                                     sarah.<span class="green">languages</span>
                                 </p>
                                 <p class="return">
-                                    [english, danish, german, swedish]
+                                    [danish, english, german, swedish]
                                 </p>
                             </div>
                             <div class="statement">
@@ -118,7 +118,7 @@
                                 <p class="return">
                                     <a target="_blank"
                                    
-                                        class="return">Frozen Marg</a>
+                                        class="return">Frozen Margarita</a>
                                 </p>
                             </div>
                             <div class="statement">
@@ -170,10 +170,10 @@
                     <h3>Experience</h3>
                     <div class="education-experience-card">
                         <div class="card-info">
-                            <h4 class="green">Client Support Specialist</h4>
-                            <p class="date">Sept 2021 - Present</p>
-                            <p><a href="https://get.popmenu.com/">Popmenu</a><br>
-                                Remote</p>
+                            <h4 class="green">Computational Research Assistant</h4>
+                            <p class="date">Dec 2022 - Present</p>
+                            <p><a href="https://towcenter.columbia.edu/">Tow Center for Digital Journalism</a><br>
+                                </p>
                         </div>
                         <div class="card-description">
                             <p><em>to be updated*</em></p>
@@ -181,16 +181,14 @@
                     </div>
                     <div class="education-experience-card">
                         <div class="card-info">
-                            <h4 class="green">Independent Computer Technician</h4>
-                            <p class="date">Jan 2018 - Present</p>
-                            <p>Freelance<br>
+                            <h4 class="green">Lab Manager & Honors Thesis Student</h4>
+                            <p class="date">Sep 2020 - Jun 2021</p>
+                            <p><a href="https://www.jayvanbavel.com/lab">Social Identity & Morality Lab</a><br>
                                 Remote</p>
                         </div>
                         <div class="card-description">
-                            <p>Install, test, repair, and troubleshoot mobile devices, computer
-                                systems, and related peripheral devices.</p>
-                            <p>Assemble, maintain, and repair custom PCs, install and repair
-                                Windows OS, configure BIOS and UEFI.</p>
+                            <p>Sat up a lab-wide system for using open-source reference management software</p>
+                            <p>Investigated how strangers make collective moral judgments to hypothetical and real morally ambiguous scenarios.</p>
                             <p>Provide technical assistance for clients on assembly and initial
                                 setup of their PCs.</p>
                             <p>Recommend PC hardware and peripheral purchases to best serve
