--- a/about.html
+++ b/about.html
@@ -184,15 +184,13 @@
                             <h4 class="green">Lab Manager & Honors Thesis Student</h4>
                             <p class="date">Sep 2020 - Jun 2021</p>
                             <p><a href="https://www.jayvanbavel.com/lab">Social Identity & Morality Lab</a><br>
-                                Remote</p>
+                                </p>
                         </div>
                         <div class="card-description">
                             <p>Sat up a lab-wide system for using open-source reference management software</p>
                             <p>Investigated how strangers make collective moral judgments to hypothetical and real morally ambiguous scenarios.</p>
-                            <p>Provide technical assistance for clients on assembly and initial
-                                setup of their PCs.</p>
-                            <p>Recommend PC hardware and peripheral purchases to best serve
-                                client’s needs and budget.</p>
+                            <p>Coded remote research study using Python, Javascript and HTML</p>
+                            
                         </div>
                     </div>
                      
