--- a/index.html
+++ b/index.html
@@ -24,14 +24,15 @@
         <meta name="twitter:site" content="@grevy_sarah">
 
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="copyright" content="Annie Wu">
+        <meta name="copyright" content="Sarah Grevy
+                                        ">
         <meta name="description"
             content=Hi! I'm Sarah, an aspirering data journalist and current grad student at Columbia University">
         <meta name="keywords"
             content="Sarah Grevy Gotfredse, data journalism, columbia">
         <meta name="robots" content="noindex, nofollow" />
 
-        <link rel="canonical" href="https://anniew.xyz" />
+        <link rel="canonical" href="https://sarahgrevy.github.io/" />
 
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -97,7 +98,7 @@
                             </a>
                         </li>
                         <li class="social-link">
-                            <a href="https://twitter.com/anniedotexe" aria-label="Twitter"
+                            <a href="https://twitter.com/grevy_sarah" aria-label="Twitter"
                                 target="_blank">
                                 <i class="fab fa-twitter"></i>
                             </a>
@@ -262,51 +263,7 @@
                     </div>
                  
                 </div>
-<!-- 
-                <div class="footer-column">
-                    <a href="/about" class="footer-button">
-                        <img src="./img/smile.svg" alt="Smile Icon">
-                        About
-                    </a>
-                    <a href="/projects" class="footer-button">
-                        <img src="./img/coding.svg" alt="Code Icon">
-                        Projects
-                    </a>
-                    <a href="/photos" class="footer-button">
-                        <img src="./img/camera.svg" alt="Camera Icon">
-                        Photos
-                    </a>
-                </div>
-                <div class="footer-column">
-                    <a href="https://anniedotexe.notion.site/2f89ab02918142e885a684db6e8d6c53?v=e84b8638720749c9a11741c6790c7022"
-                        class="footer-button">
-                        <img src="./img/blog.svg" alt="Blog Icon">
-                        Thoughts
-                    </a>
-                    <a href="/anniewu-resume.pdf" class="footer-button">
-                        <img src="./img/resume.svg" alt="Resume Icon">
-                        Resume
-                    </a>
-                    <a href="mailto:anniewu2303@gmail.com" class="footer-button">
-                        <img src="./img/email.svg" alt="Email Icon">
-                        Contact
-                    </a>
-                </div>
-                <div class="footer-column">
-                    <a href="https://anniedotexe.notion.site/uses-27a07012b8e84144af2e4226721c8ce8"
-                        class="footer-button">
-                        <img src="./img/uses.svg" alt="Lightning Icon">
-                        Uses
-                    </a>
-                    <a href="https://www.polywork.com/anniedotexe" class="footer-button">
-                        <img src="./img/polywork.svg" alt="PolyWork Icon">
-                        Updates
-                    </a>
-                    <a href="mailto:anniewu2303@gmail.com" class="footer-button">
-                        <img src="./img/email.svg" alt="Email Icon">
-                        Contact
-                    </a>
-                </div>  -->
+
             </div>
         </footer>
 
