--- a/about.html
+++ b/about.html
@@ -195,7 +195,7 @@
                         
                         <div class="education-experience-card">
                         <div class="card-info">
-                            <h4 class="green">a href="https://docs.google.com/document/d/1iAVikWj_jq3GhL6s2Y6LqIWSp5i6GFj-/edit?usp=sharing&ouid=111747219481746388544&rtpof=true&sd=true"Click here for my CV</a></h4>
+                            <h4 class="green"><a href="https://docs.google.com/document/d/1iAVikWj_jq3GhL6s2Y6LqIWSp5i6GFj-/edit?usp=sharing&ouid=111747219481746388544&rtpof=true&sd=true">Click here for my CV</a></h4>
                            
                         </div>
                     </div>
