--- a/about.html
+++ b/about.html
@@ -144,7 +144,7 @@
                         
                         <div class="card-info">
                             <h4 class="green">M.S. Data Journalism</h4>
-                            <p class="date">Aug 2021 - present </p>
+                            <p class="date">2021 - present </p>
                             <p>Columbia University<br>
                                 NYC</p>
                         </div>
