--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                                     Beer & Alcohol Analysis 
                                 </span>
                                 <div class="project-links">
-                                    <a href="https://clone-2-2ee81.firebaseapp.com">
+                                    <a href="https://github.com/SarahGrevy/Beer_Analysis/blob/main/gotfredsen_beer.ipynb">
                                         <i class="fas fa-external-link-alt"></i>
                                     </a>
                                     <a href="https://github.com/SarahGrevy/Beer_Analysis/blob/main/gotfredsen_beer.ipynb">
