--- a/index.html
+++ b/index.html
@@ -143,6 +143,34 @@
                               
                             </p>
                         </div>
+                        <div class="project-cards-container">
+                    <div class="card">
+                        <img src="./img/SC_2021.png"
+                            alt="Project Preview Screenshot" class="card-preview-img">
+                        <div class="card-info">
+                            <div class="title-and-links">
+                                <span class="project-title">
+                                    Danish Weather VS the United States 
+                                </span>
+                                <div class="project-links">
+                                    <a href="https://github.com/SarahGrevy">
+                                        <i class="fas fa-external-link-alt"></i>
+                                    </a>
+                                    <a href="https://sarahgrevy.github.io/weather_project">
+                                        <i class="fab fa-github"></i>
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="project-skills">
+                                <span>Python</span>
+                                <span>Regex</span>
+                                <span>JavaScript</span>
+                            </div>
+                            <p class="project-description">
+                                The idea of perfect weather is highly subjective. But a lot of people like sunshine, warmth and lush greenery. Based on an analysis of U.N. climate data, here’s how Denmark and the United States differ and why Danes may want to consider a trip stateside. 
+                              
+                            </p>
+                        </div>
                     </div>
                     <div class="card">
                         <img src="./img/tove.png"
