--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                         </div>
                         <div class="project-cards-container">
                     <div class="card">
-                        <img src="./img/SC_2021.png"
+                        <img src="./img/weather.png"
                             alt="Project Preview Screenshot" class="card-preview-img">
                         <div class="card-info">
                             <div class="title-and-links">
