--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                               
                             </p>
                         </div>
-                        <div class="project-cards-container">
+<!--                         <div class="project-cards-container">
                     <div class="card">
                         <img src="./img/weather.png"
                             alt="Project Preview Screenshot" class="card-preview-img">
@@ -171,7 +171,7 @@
                               
                             </p>
                         </div>
-                    </div>
+                    </div> -->
                     <div class="card">
                         <img src="./img/tove.png"
                             alt="Project Preview Screenshot" class="card-preview-img">
