--- a/index.html
+++ b/index.html
@@ -138,11 +138,13 @@
                                 <span>Regex</span>
                                 <span>JavaScript</span>
                             </div>
+                       
                             <p class="project-description">
                                 An interactive map of the United States depicting 2020 supremecourt cases containing the most agreeable and disagreeable langauge between court members.
                               
                             </p>
                         </div>
+                    </div>
 <!--                         <div class="project-cards-container">
                     <div class="card">
                         <img src="./img/weather.png"
