--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                                     Mapping Language Use in 2020 Supremcourt Cases
                                 </span>
                                 <div class="project-links">
-                                    <a href="https://github.com/SarahGrevy">
+                                    <a href="https://sarahgrevy.github.io/Supremcourt_Mapping/">
                                         <i class="fas fa-external-link-alt"></i>
                                     </a>
                                     <a href="https://github.com/SarahGrevy/Supremcourt_Mapping">
