--- a/co2_emission.html
+++ b/co2_emission.html
@@ -65,11 +65,10 @@
         <main class="main-container home-section">
             <section id="home">
                 <div class="landing-page-details">
-                    <h1 class="small-title"> Co2 Emission per Country</h1>
+                    <h1 class="small-title"> Change in Co2 Emission per Country, 1960 - 2020 </h1>
                     <br>
 
-                    <div class="flourish-embed" data-src="story/1133283"><script src="https://public.flourish.studio/resources/embed.js"></script></div>
-
+                        <div class="flourish-embed" data-src="story/1139706"><script src="https://public.flourish.studio/resources/embed.js"></script></div>
                         <!-- <iframe title="Danes Endure Long, Dark Winters " aria-label="Interactive line chart" id="datawrapper-chart-Kzf9Q" src="https://datawrapper.dwcdn.net/Kzf9Q/5/" scrolling="no" frameborder="0" style="width: 0; color:white; min-width: 100% !important; border: none;" height="562"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(e){if(void 0!==e.data["datawrapper-height"]){var t=document.querySelectorAll("iframe");for(var a in e.data["datawrapper-height"])for(var r=0;r<t.length;r++){if(t[r].contentWindow===e.source)t[r].style.height=e.data["datawrapper-height"][a]+"px"}}}))}();
                         </script> -->
                         
