--- a/co2_emission.html
+++ b/co2_emission.html
@@ -65,18 +65,21 @@
         <main class="main-container home-section">
             <section id="home">
                 <div class="landing-page-details">
-                    <h1 class="small-title"> Change in Co2 Emission per Country, 1960 - 2020 </h1>
+                    <h1 class="small-title"> The Pandemic Decreased Global CO₂ Emissions, But Only by a Little</h1>
                     <br>
-
-                        <div class="flourish-embed" data-src="story/1139706"><script src="https://public.flourish.studio/resources/embed.js"></script></div>
-                        <!-- <iframe title="Danes Endure Long, Dark Winters " aria-label="Interactive line chart" id="datawrapper-chart-Kzf9Q" src="https://datawrapper.dwcdn.net/Kzf9Q/5/" scrolling="no" frameborder="0" style="width: 0; color:white; min-width: 100% !important; border: none;" height="562"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(e){if(void 0!==e.data["datawrapper-height"]){var t=document.querySelectorAll("iframe");for(var a in e.data["datawrapper-height"])for(var r=0;r<t.length;r++){if(t[r].contentWindow===e.source)t[r].style.height=e.data["datawrapper-height"][a]+"px"}}}))}();
-                        </script> -->
-                        
-                        <!-- <iframe title="Denmark has Colder Summers but Hotter Winters Compared to the US" aria-label="Interactive line chart" id="datawrapper-chart-kD34p" src="https://datawrapper.dwcdn.net/kD34p/11/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="542"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(e){if(void 0!==e.data["datawrapper-height"]){var t=document.querySelectorAll("iframe");for(var a in e.data["datawrapper-height"])for(var r=0;r<t.length;r++){if(t[r].contentWindow===e.source)t[r].style.height=e.data["datawrapper-height"][a]+"px"}}}))}();
-                        </script> -->
-                        
-                        <!-- <iframe title="Danes Stay Dry Throughout the Year " aria-label="Interactive line chart" id="datawrapper-chart-4H5XO" src="https://datawrapper.dwcdn.net/4H5XO/9/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="521"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(e){if(void 0!==e.data["datawrapper-height"]){var t=document.querySelectorAll("iframe");for(var a in e.data["datawrapper-height"])for(var r=0;r<t.length;r++){if(t[r].contentWindow===e.source)t[r].style.height=e.data["datawrapper-height"][a]+"px"}}}))}();
-                        </script> -->
+                    <p>The Covid-19 pandemic proved a disaster in many ways to the human race. But for the globe, there was a silver lining - namely a decrease in carbon dioxide emission. Due to government policies, energy patterns were drastically altered around the world. International borders were closed and people were confined to their homes. That meant no more taking the subway to work, spring breaks to the Bahamas, or visits to the movie theater. Yet due to Covid relaxations in the second half of 2020, CO₂  emissions have been making a comeback in some countries. </p>
+                     <br>
+                     <p>CO₂ emissions fell by 6.4% or 2.3 billion tonnes in 2020. This is a significant ship considering the majority of countries in the world have seen a steady increase in emissions every year in the past decades. It wasn’t until the Paris Agreement in 2016 that world leaders decided to at least try to slow down the rapid increase in emissions. And yet, the pandemic by far outperformed the Paris Agreement, slowing down emissions beyond what was previously agreed. Still though, the decrease wasn't as big as many climate scientists had predicted given the pandemic's significant impact on people's day-to-day lives.</p>
+                    <br> <div class="flourish-embed flourish-map" data-src="visualisation/8729423"><script src="https://public.flourish.studio/resources/embed.js"></script></div>     
+                    <br>
+                    <p>Which countries saw the biggest decrease in CO₂ emissions? As you can see in the map above, almost every country saw a decrease but some more than others. Blue colors indicate that emissions were lower than before the pandemic. Red colors indicate they were higher. The darker the color, the higher or lower the emission. For instance, the U.S. saw a change of -10% which means it produces 10% less emissions in 2020 than in 2019 (hence it's color changed from baby blue to deep blue). Likewise, most countries in Europe saw significant reductions. Greece, for instance, saw an 18% drop and Spain 17%</p>
+                    <br>
+                    <p>While China saw a drastic decrease in CO₂ emissions during the first half of 2020, it was one of the first countries to recover from the pandemic. Hence, when things were semi-back to normal in China, the government turned up for a carbon-intensive economic recovery. As a result, in the 12 months since China began relaxing Covid-19 lockdowns, CO₂ emissions have exceeded pre-pandemic by 7%. China, therefore, saw an overall increase of 1.6% in 2020.</p> <br>
+                    <div class="flourish-embed flourish-chart" data-src="visualisation/8744318"><script src="https://public.flourish.studio/resources/embed.js"></script></div>
+                    <p>Humans emit CO₂ in lots of different ways. One of the main contributors are power plants that burn fossil fuel, such as coal or natural gas, and industries that drill or mine for these energy sources. Then there are sectors humans are more familiar with on a day-to-day basis such as residential emission (emissions from cooking, space and water heating, clothes drying, etc.), surface transportation (by rail or road), and aviation (plane trips).</p>
+                    <br> 
+                    <p>The chart above shows the estimated change in fossil fuels during the pandemic. Sectors that humans interact most with directly such as aviation and surface transportation were impacted the most at nearly 15% and 17% respectively. However, as Covid regulations started to relax, emissions are nearing pre-pandemic levels.</p>
+                  <br>
 
                 </div>
                 <div class="art-me">
