--- a/co2_emission.html
+++ b/co2_emission.html
@@ -105,9 +105,17 @@
                     </p>
                     <br> 
                     <P>
-                        “Throughout the pandemic we have heard that we must build back better to set humanity on a more sustainable path and to avoid the worst impacts of climate change on society and economies. This report shows that so far in 2021 we are not going in the right direction,” said Prof. Taalas, one of the main researchers on the report. 
+                        UN Secretary-General Antonio Guterres delivered a video message for the release of the report at a press conference given by WMO Secretary-General Prof. Petteri Taalas.
+
                     </P>
+            
                   <br>
+                  <iframe width="560" height="315" src="https://www.youtube.com/watch?v=Eli0crdZUxg" frameborder="0" allowfullscreen></iframe>
+
+                  <br>
+                  <p>
+                    “We are still significantly off-schedule to meet the goals of the Paris Agreement. This year has seen fossil fuel emissions bounce back, greenhouse gas concentrations continuing to rise and severe human-enhanced weather events that have affected health, lives and livelihoods on every continent.  Unless there are immediate, rapid and large-scale reductions in greenhouse gas emissions, limiting warming to 1.5°C will be impossible, with catastrophic consequences for people and the planet on which we depend,”Guterres said. 
+                  </p><br>
                   <p>
                     While the Covid-19 pandemic might have offered a short-term reduction in global emissions, the pace at which countries are rebounding will likely outdo it.  According to the United in Science, the world won’t meet the goals of the Paris Agreement for 2030 unless countries pursue an economic recovery that incorporates strong decarbonization.
                   </p>
